<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/spalsh_new"
    android:padding="10dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:id="@+id/header"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="57dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/name_text"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/our_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_text"
        android:layout_centerVertical="true"
        android:text="@string/our_progress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/our_prog"
        android:id="@+id/score_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/score"
        android:layout_alignTop="@+id/score_text"
        android:layout_toRightOf="@+id/score_text"
        android:layout_marginLeft="10dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_score"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginTop="20dip"
        android:layout_below="@+id/score_text"
        android:id="@+id/level_score_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level1"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_marginTop="10dip"
        android:layout_below="@+id/level_score_text"
        android:id="@+id/level1_text"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/level1_text"
        android:layout_toRightOf="@+id/level1_text"
        android:layout_marginLeft="10dip"
        style="?android:attr/ratingBarStyleSmall"
        android:id="@+id/rating"/>

</RelativeLayout>